
_____________________________________________________________________________________________________


                                       CFDWARP CHANGELOG

_____________________________________________________________________________________________________


2025 MAR 23a
  * in model/emfield/doc/Electrodynamics/report.tex
    - Added the Coulomb gauge and improved the section on the magnetic potential equations
    

2025 MAR 21b
  * in model/emfield/_Epotential-B/emfield.c
    - included the effect of a time-varying electric field to the B field equations


2025 MAR 21a
  * in model/fluid/_Navier-Stokes_plasma/fluid_source.c
    - made improvements to find_Qe_Rodriguez2025() and find_dSe_dU_transport_Rodriguez2025()
    

2025 MAR 17c
  * in model/emfield/_Epotential-Bfixed/emfield.c
    - implemented extrapolated boundary conditions for the induced magnetic fields
      except for the BC BDRYEMF_DIELECTRICBFIXED


2025 MAR 17b
  * in model/emfield/_Epotential-Bfixed/emfield.c
    - added the induced magnetic field contribution to B
    - added the BDRYEMF_DIELECTRICBFIXED boundary condition


2025 MAR 17a
  * in cycle/share/cycle_share.c
    - in update_prim_emfield_mem_in_zone_4(), made the malloc function of tsemfcoeffhbw
  * in model/emfield/_*/emfield.c
    - made coeffgl function of tsemfcoeffhbw
  * in src/common.h
    - in npbs_t, made tsemfcoeff function of tsemfcoeffhbw
  * in model/emfield/_Epotential-Bfixed/emfield.c
    - in find_Jstar_emf_interface_DELTAVK(), fixed (j=0; j<3; j++) to (j=0; j<nd; j++) 


2025 MAR 16a
  * in cycle/share/cycle_share.c
    - in update_prim_emfield_mem_in_zone_4(), fixed a bug which occurs when nfe>1
  * in model/emfield/_Epotential-B/emfield.c
    - fixed a few issues
    

2025 MAR 12a
  * in model/fluid/_Navier-Stokes_plasma/fluid_source.c
    - added _ke_kl_N2vib_from_Te(), _fk_N2vib_from_Tv(), _QeN2vib_from_rhok_T_Tv_Te()
  * in model/thermo/_generic/electronimpact.c