@@ -4,6 +4,7 @@ option   none
 optionP   Epotential
 optionP   Epotential-Bfixed
 optionP   Epotential-B
+optionP   Epotential-Bpotential
 optionX   test
-help     Choose "none" if simulating a non-ionized gas. Choose "Epotential" if simulating a plasma without an external magnetic field using a potential based on Ohm's or Gauss's law. Choose "Epotential-Bfixed" if simulating a plasma under the influence of an external magnetic field using a potential based on either Ohm's or Gauss's law.  Choose "Epotential-B" to add the induced magnetics fields to the applied ones. Note that the three strategies guarantee that Gauss's law is satisfied and are thus suitable to non-neutral plasmas.
+help     Choose "none" if simulating a non-ionized gas. Choose "Epotential" if simulating a plasma without an external magnetic field using a potential based on Ohm's or Gauss's law. Choose "Epotential-Bfixed" if simulating a plasma under the influence of an external magnetic field using a potential based on either Ohm's or Gauss's law.  Choose "Epotential-B" or "Epotential-Bpotential" to add the induced magnetics fields to the applied ones. Note that the three strategies guarantee that Gauss's law is satisfied and are thus suitable to non-neutral plasmas.
 END
