@@ -10,6 +10,7 @@ clean:
 cleanall:
 	( cd _Epotential-Bfixed ; make cleanall )
 	( cd _Epotential-B ; make cleanall )
+	( cd _Epotential-Bpotential ; make cleanall )
 	( cd _Epotential ; make cleanall )
 	( cd _test ; make cleanall )
 	( cd _none ; make cleanall )
