@@ -1,0 +1,2 @@
+current Epotential-Bpotential
+END
